<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="#edefef"
    tools:context="com.example.mydoctor.mydoctor.Login.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



            <EditText
                android:id="@+id/userFirstName"
                style="EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@color/off_white"
                android:cursorVisible="true"
                android:fontFamily="calibri"
                android:hint="@string/first_name"
                android:textSize="14sp"
                android:padding="8dp" />

            <EditText
                android:id="@+id/userLastName"
                style="EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="calibri"
                android:background="@color/off_white"
                android:cursorVisible="true"
                android:hint="@string/last_name"
                android:textSize="14sp"
                android:padding="8dp" />




        <EditText
            android:id="@+id/editTextUserEmail"
            style="EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="calibri"
            android:layout_marginBottom="10dp"
            android:background="@color/off_white"
            android:cursorVisible="true"
            android:hint="@string/Email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:padding="8dp" />

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/editTextUserAge"
                style="EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@color/colorWhite"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="Age"
                android:inputType="number"
                android:padding="8dp" />

            <RadioGroup
                android:id="@+id/radioGrpUser_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonUser_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButtonUser_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female" />

            </RadioGroup>

        </LinearLayout>-->




            <EditText
                android:id="@+id/editTextUserPassword"
                style="EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:fontFamily="calibri"
                android:background="@color/off_white"
                android:cursorVisible="true"
                android:hint="@string/Password"
                android:textSize="14sp"
                android:padding="8dp" />

        <EditText
            android:id="@+id/editTextUserCnfPassword"
            style="EditTextStyle"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/off_white"
            android:cursorVisible="true"
            android:hint="@string/confirm_password"
            android:textSize="14sp"
            android:fontFamily="calibri"
            android:padding="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccdDoc_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:countryPreference="US, GB, NZ, AE"
                app:defaultNameCode="GB" />


            <EditText
                android:id="@+id/editTextUser_phone"
                style="EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/off_white"
                android:cursorVisible="true"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="14sp"
                android:padding="8dp" />


        </LinearLayout>

        <Button
            android:id="@+id/userRegbtn"
            android:layout_width="match_parent"
            style="@style/LoginButtonStyle"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />


    </LinearLayout>


</RelativeLayout>
